# api-docs/swagger.json
@@ -131,7 +131,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes"],
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes","averageMark"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -149,9 +149,12 @@
                                                 "type": "number",
                                                 "example":1000
                                             },
+                                            "averageMark":{
+                                                "type": "number"
+                                            },
                                             "description":{
                                                 "type": "string",
-                                                "example":"desctiption"
+                                                "example":"description"
                                             },
                                             "city":{
                                                 "type": "string"
@@ -296,7 +299,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","numberOfLikes","liked"],
+                                        "required": ["id","adCategory","area","price","description","numberOfLikes","liked","averageMark"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -314,9 +317,12 @@
                                                 "type": "number",
                                                 "example":1000
                                             },
+                                            "averageMark":{
+                                                "type": "number"
+                                            },
                                             "description":{
                                                 "type": "string",
-                                                "example":"desctiption"
+                                                "example":"description"
                                             },
                                             "numberOfLikes":{
                                                 "type": "integer"
@@ -370,7 +376,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes","liked"],
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes","liked","averageMark"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -387,10 +393,13 @@
                                             "price":{
                                                 "type": "number",
                                                 "example":1000
-                                            },  
+                                            },
+                                            "averageMark":{
+                                                "type": "number"
+                                            },
                                             "description":{
                                                 "type": "string",
-                                                "example":"desctiption"
+                                                "example":"description"
                                             },
                                             "city":{
                                                 "type": "string"
@@ -451,7 +460,7 @@
                 "parameters": [
                     {
                         "name": "adId",
-                        "description": "Id of advertisment that needs to be updated",
+                        "description": "Id of advertisment that needs to be fetched",
                         "in": "path",
                         "required": true,
                         "schema":{
@@ -469,7 +478,7 @@
                                     "type": "array",
                                     "items":{
                                         "type": "object",
-                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes"],
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes","averageMark","comments"],
                                         "properties": {
                                             "id":{
                                                 "type": "integer",
@@ -486,10 +495,13 @@
                                             "price":{
                                                 "type": "number",
                                                 "example":1000
-                                            },  
+                                            },
+                                            "averageMark":{
+                                                "type": "number"
+                                            },
                                             "description":{
                                                 "type": "string",
-                                                "example":"desctiption"
+                                                "example":"description"
                                             },
                                             "city":{
                                                 "type": "string"
@@ -511,6 +523,33 @@
                                                     "name":{
                                                         "type": "string",
                                                         "example":"Firstname Lastname"
+                                                    }
+                                                }
+                                            },
+                                            "comments":{
+                                                "type": "array",
+                                                "items":{
+                                                    "type": "object",
+                                                    "required": ["mark","comment","user"],
+                                                    "properties": {
+                                                        "mark":{
+                                                            "type": "number"
+                                                        },
+                                                        "comment":{
+                                                            "type": "string"
+                                                        },
+                                                        "user":{
+                                                            "type": "object",
+                                                            "required": ["username","name"],
+                                                            "properties": {
+                                                                "username":{
+                                                                    "type": "string"
+                                                                },
+                                                                "name":{
+                                                                    "type": "string"
+                                                                }
+                                                            }
+                                                        }
                                                     }
                                                 }
                                             }
@@ -772,6 +811,138 @@
                 "security": [{"bearerAuth":[]}]
             }
         },
+        "/api/ads/dateiled/{adId}":{
+            "get":{
+                "tags": ["Advertisments"],
+                "parameters": [
+                    {
+                        "name": "adId",
+                        "description": "Id of advertisment that needs to be fetched",
+                        "in": "path",
+                        "required": true,
+                        "schema":{
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "summary": "Get advertisment by id for logged-in user",
+                "responses": {
+                    "200":{
+                        "description": "Successful response",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "type": "array",
+                                    "items":{
+                                        "type": "object",
+                                        "required": ["id","adCategory","area","price","description","owner","city","country","numberOfLikes","averageMark","comments","myAd","liked"],
+                                        "properties": {
+                                            "id":{
+                                                "type": "integer",
+                                                "example":1
+                                            },
+                                            "adCategory":{
+                                                "type": "string",
+                                                "example":"RENT"
+                                            },
+                                            "area":{
+                                                "type": "number",
+                                                "example":100
+                                            },
+                                            "price":{
+                                                "type": "number",
+                                                "example":1000
+                                            },
+                                            "averageMark":{
+                                                "type": "number"
+                                            },
+                                            "description":{
+                                                "type": "string",
+                                                "example":"description"
+                                            },
+                                            "city":{
+                                                "type": "string"
+                                            },
+                                            "country":{
+                                                "type": "string"
+                                            },
+                                            "numberOfLikes":{
+                                                "type": "integer"
+                                            },
+                                            "myAd":{
+                                                "type": "boolean",
+                                                "title": "Logged-in user is owner of ad"
+                                            },
+                                            "liked":{
+                                                "type": "boolean"
+                                            },
+                                            "owner":{
+                                                "type": "object",
+                                                "required": ["username","name"],
+                                                "properties": {
+                                                    "username":{
+                                                        "type": "string",
+                                                        "example":"user1"
+                                                    },
+                                                    "name":{
+                                                        "type": "string",
+                                                        "example":"Firstname Lastname"
+                                                    }
+                                                }
+                                            },
+                                            "comments":{
+                                                "type": "array",
+                                                "items":{
+                                                    "type": "object",
+                                                    "required": ["mark","comment","user"],
+                                                    "properties": {
+                                                        "mark":{
+                                                            "type": "number"
+                                                        },
+                                                        "comment":{
+                                                            "type": "string"
+                                                        },
+                                                        "user":{
+                                                            "type": "object",
+                                                            "required": ["username","name"],
+                                                            "properties": {
+                                                                "username":{
+                                                                    "type": "string"
+                                                                },
+                                                                "name":{
+                                                                    "type": "string"
+                                                                }
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404":{
+                        "description": "Not found",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "type": "object",
+                                    "required":["message"],
+                                    "properties": {
+                                        "message":{
+                                            "type": "string",
+                                            "example":"message"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/ad_category":{
             "get":{
                 "tags": ["Adveritisment's categories"],
@@ -841,7 +1012,7 @@
                                                     },
                                                     "description":{
                                                         "type": "string",
-                                                        "example":"desctiption"
+                                                        "example":"description"
                                                     }
                                                 }
                                             },
@@ -920,7 +1091,7 @@
                                                     },
                                                     "description":{
                                                         "type": "string",
-                                                        "example":"desctiption"
+                                                        "example":"description"
                                                     }
                                                 }
                                             },
